Make changes to FAQ and Contact Page

--- a/torcommander-website/faq.html
+++ b/torcommander-website/faq.html
@@ -25,26 +25,38 @@
   </header>
 
   <main>
-    <div class="card">
+    <div class="card faq">
       <h2>Frequently Asked Questions</h2>
 
-      <h3>❓ What is TorCommander?</h3>
-      <p>TorCommander is a Linux tool that routes your terminal commands through the Tor network to hide your IP address and location.</p>
+      <div class="faq-item">
+        <h3 class="faq-question">❓ What is TorCommander?</h3>
+        <p class="faq-answer">TorCommander is a Linux tool that routes your terminal commands through the Tor network to hide your IP address and location.</p>
+      </div>
 
-      <h3>❓ Do I need to install Tor separately?</h3>
-      <p>Yes. You must have Tor installed and running on your system for TorCommander to work correctly.</p>
+      <div class="faq-item">
+        <h3 class="faq-question">❓ Do I need to install Tor separately?</h3>
+        <p class="faq-answer">Yes. You must have Tor installed and running on your system for TorCommander to work correctly.</p>
+      </div>
 
-      <h3>❓ Does TorCommander support Windows or macOS?</h3>
-      <p>No. Currently, TorCommander is designed for Linux-based systems only.</p>
+      <div class="faq-item">
+        <h3 class="faq-question">❓ Does TorCommander support Windows or macOS?</h3>
+        <p class="faq-answer">No. Currently, TorCommander is designed for Linux-based systems only.</p>
+      </div>
 
-      <h3>❓ Is this tool legal to use?</h3>
-      <p>Yes. Using Tor to protect your privacy is legal in most countries, but always use the tool ethically and in accordance with your local laws.</p>
+      <div class="faq-item">
+        <h3 class="faq-question">❓ Is this tool legal to use?</h3>
+        <p class="faq-answer">Yes. Using Tor to protect your privacy is legal in most countries, but always use the tool ethically and in accordance with your local laws.</p>
+      </div>
 
-      <h3>❓ Where can I report bugs?</h3>
-      <p>You can report bugs on the <a href="https://github.com/Anay-Patil/tor-commander/issues" target="_blank">GitHub Issues page</a>.</p>
+      <div class="faq-item">
+        <h3 class="faq-question">❓ Where can I report bugs?</h3>
+        <p class="faq-answer">You can report bugs on the <a href="https://github.com/Anay-Patil/tor-commander/issues" target="_blank">GitHub Issues page</a>.</p>
+      </div>
 
-      <h3>❓ Can I contribute?</h3>
-      <p>Absolutely! Head over to the <a href="contributing.html">Contributing</a> page to learn how to get started.</p>
+      <div class="faq-item">
+        <h3 class="faq-question">❓ Can I contribute?</h3>
+        <p class="faq-answer">Absolutely! Head over to the <a href="contributing.html">Contributing</a> page to learn how to get started.</p>
+      </div>
     </div>
   </main>
 
