--- a/torcommander-website/contact.html
+++ b/torcommander-website/contact.html
@@ -27,19 +27,27 @@
   <main>
     <div class="card">
       <h2>Contact Us</h2>
-      <form class="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <input type="text" placeholder="Subject" required>
-        <textarea placeholder="Your Message" rows="5" required></textarea>
+      <form class="contact-form" id="contactForm">
+        <input type="text" id="name" placeholder="Your Name" required>
+        <input type="email" id="email" placeholder="Your Email" required>
+        <input type="text" id="subject" placeholder="Subject" required>
+        <textarea id="message" placeholder="Your Message" rows="5" required></textarea>
         <button type="submit" class="btn">Send</button>
       </form>
+      <div id="confirmationMessage" style="display:none; color: #1e90ff; margin-top: 10px;"></div>
     </div>
   </main>
 
   <footer>
     &copy; 2025 TorCommander. Securing your shell.
   </footer>
+
+  <div id="confirmationModal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times;</span>
+      <p>Thank you for contacting us, we'll review your message soon.</p>
+    </div>
+  </div>
 
   <script src="js/script.js"></script>
 </body>
