Remove logo for better UI

--- a/torcommander-website/about.html
+++ b/torcommander-website/about.html
@@ -8,7 +8,6 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.jpg" alt="TorCommander Logo" class="logo" />
     <h1>TorCommander</h1>
     <nav>
       <ul>
@@ -31,7 +30,7 @@
 
       <p>Our goal is to provide developers, researchers, and enthusiasts with a modular, extensible, and secure framework for executing system commands without revealing their digital footprint.</p>
 
-      <p>This is not just a tool — it’s an invitation to experiment, improve, and make the open web safer and freer for everyone.</p>
+      <p>This is not just a tool — it's an invitation to experiment, improve, and make the open web safer and freer for everyone.</p>
     </div>
   </main>
 
