--- a/torcommander-website/index.html
+++ b/torcommander-website/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.jpg" alt="TorCommander Logo" class="logo" />
     <h1>TorCommander</h1>
     <nav>
       <ul>
@@ -27,7 +26,7 @@
   <main>
     <div class="card">
       <h2>Welcome to TorCommander</h2>
-      <p><strong>TorCommander</strong> is a Linux-based tool that routes your commands through the Tor network to ensure full anonymity and geolocation masking. It’s the privacy-conscious hacker’s best friend — built open-source, inspired by <em>Dr. Jones Birch</em>, and ready for the community.</p>
+      <p><strong>TorCommander</strong> is a Linux-based tool that routes your commands through the Tor network to ensure full anonymity and geolocation masking. It's the privacy-conscious hacker's best friend — built open-source, inspired by <em>Dr. Jones Birch</em>, and ready for the community.</p>
 
       <p>Use TorCommander to:</p>
       <ul>
