--- a/torcommander-website/contributing.html
+++ b/torcommander-website/contributing.html
@@ -14,9 +14,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="features.html">Features</a></li>
-        <li><a href="installation.html">Installation</a></li>
         <li><a href="documentation.html">Documentation</a></li>
-        <li><a href="contributing.html" class="active">Contributing</a></li>
+        <li><a href="contributing.html">Contributing</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="faq.html">FAQ</a></li>
       </ul>
@@ -26,17 +25,18 @@
   <main>
     <div class="card">
       <h2>Contributing to TorCommander</h2>
-
+  
       <p>We welcome all contributions from developers, security researchers, open-source enthusiasts, and privacy advocates.</p>
-
+  
       <h3>How to Contribute</h3>
       <ol>
         <li>Fork the <a href="https://github.com/Anay-Patil/tor-commander" target="_blank">TorCommander GitHub Repository</a>.</li>
         <li>Create a new branch for your feature or fix.</li>
         <li>Write clean, well-documented code and commit your changes.</li>
-        <li>Submit a pull request with a clear description of your update.</li>
+        <li>Push your branch to your forked repository.</li>
+        <li>Open a pull request with a clear description of your update.</li>
       </ol>
-
+  
       <h3>Contribution Areas</h3>
       <ul>
         <li>Enhancing anonymity features</li>
@@ -46,10 +46,11 @@
         <li>Writing documentation</li>
         <li>Design/UI improvements (like this website!)</li>
       </ul>
-
+  
       <p>We look forward to your contributions and ideas!</p>
     </div>
   </main>
+  
 
   <footer>
     &copy; 2025 TorCommander. Built with the community, for the community.
