--- a/torcommander-website/documentation.html
+++ b/torcommander-website/documentation.html
@@ -14,8 +14,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="features.html">Features</a></li>
-        <li><a href="installation.html">Installation</a></li>
-        <li><a href="documentation.html" class="active">Documentation</a></li>
+        <li><a href="documentation.html">Documentation</a></li>
         <li><a href="contributing.html">Contributing</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="faq.html">FAQ</a></li>
@@ -25,45 +24,50 @@
 
   <main>
     <div class="card">
-      <h2>Documentation</h2>
-      <p>This section provides basic usage instructions for TorCommander.</p>
-
-      <h3>Start the Tor Service</h3>
-      <div class="code-container">
-        <button class="copy-btn" onclick="copyToClipboard(this)">
-          <svg xmlns="http://www.w3.org/2000/svg" class="clipboard-icon" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M16 4H18a2 2 0 0 1 2 2V20a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2H8" />
-            <rect x="9" y="2" width="6" height="4" rx="1" ry="1" />
-          </svg>
-        </button>
-        <code>sudo service tor start</code>
-      </div>
-
-      <h3>Run TorCommander</h3>
-      <div class="code-container">
-        <button class="copy-btn" onclick="copyToClipboard(this)">
-          <svg xmlns="http://www.w3.org/2000/svg" class="clipboard-icon" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M16 4H18a2 2 0 0 1 2 2V20a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2H8" />
-            <rect x="9" y="2" width="6" height="4" rx="1" ry="1" />
-          </svg>
-        </button>
-        <code>./torcommander</code>
-      </div>
-
-      <h3>Sample Commands</h3>
-      <p>Once TorCommander is running, you can execute commands through the Tor network like this:</p>
-      <div class="code-container">
-        <button class="copy-btn" onclick="copyToClipboard(this)">
-          <svg xmlns="http://www.w3.org/2000/svg" class="clipboard-icon" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M16 4H18a2 2 0 0 1 2 2V20a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2H8" />
-            <rect x="9" y="2" width="6" height="4" rx="1" ry="1" />
-          </svg>
-        </button>
-        <code>curl --socks5-hostname 127.0.0.1:9050 https://check.torproject.org</code>
-      </div>
+      <h2>🌿 Sustainability Goals</h2>
+      <p>This project aligns with:</p>
+      <ul>
+        <li><strong>SDG 9:</strong> Promotes robust, secure, and innovative digital infrastructure.</li>
+        <li><strong>SDG 16:</strong> Strengthens digital rights, privacy, and fair access.</li>
+      </ul>
+  
+      <h2>📖 References</h2>
+      <table style="width: 100%; border-collapse: collapse; margin-top: 1rem;">
+        <thead style="background-color: transparent;">
+          <tr>
+            <th style="border: 1px solid #ccc; padding: 8px; text-align: left;">Sr. No</th>
+            <th style="border: 1px solid #ccc; padding: 8px; text-align: left;">Reference Title</th>
+            <th style="border: 1px solid #ccc; padding: 8px; text-align: left;">Source</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td style="border: 1px solid #ccc; padding: 8px;">1</td>
+            <td style="border: 1px solid #ccc; padding: 8px;">The Tor Project Documentation</td>
+            <td style="border: 1px solid #ccc; padding: 8px;"><a href="https://www.torproject.org" target="_blank">torproject.org</a></td>
+          </tr>
+          <tr>
+            <td style="border: 1px solid #ccc; padding: 8px;">2</td>
+            <td style="border: 1px solid #ccc; padding: 8px;">SOCKS4 Protocol Specification</td>
+            <td style="border: 1px solid #ccc; padding: 8px;"><a href="https://www.openssh.com/txt/socks4.protocol" target="_blank">openssh.com</a></td>
+          </tr>
+          <tr>
+            <td style="border: 1px solid #ccc; padding: 8px;">3</td>
+            <td style="border: 1px solid #ccc; padding: 8px;">LD_PRELOAD in Linux</td>
+            <td style="border: 1px solid #ccc; padding: 8px;"><a href="https://man7.org/linux/man-pages/man8/ld.so.8.html" target="_blank">man7.org</a></td>
+          </tr>
+          <tr>
+            <td style="border: 1px solid #ccc; padding: 8px;">4</td>
+            <td style="border: 1px solid #ccc; padding: 8px;">POSIX Socket Programming Concepts</td>
+            <td style="border: 1px solid #ccc; padding: 8px;"><a href="https://man7.org/linux/man-pages/man2/connect.2.html" target="_blank">man7.org</a></td>
+          </tr>
+          <tr>
+            <td style="border: 1px solid #ccc; padding: 8px;">5</td>
+            <td style="border: 1px solid #ccc; padding: 8px;">Understanding SOCKS Proxies</td>
+            <td style="border: 1px solid #ccc; padding: 8px;"><a href="https://www.haproxy.org/download/1.8/doc/proxy-protocol.txt" target="_blank">haproxy.org</a></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </main>
 
