--- a/torcommander-website/features.html
+++ b/torcommander-website/features.html
@@ -13,8 +13,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="features.html" class="active">Features</a></li>
-        <li><a href="installation.html">Installation</a></li>
+        <li><a href="features.html">Features</a></li>
         <li><a href="documentation.html">Documentation</a></li>
         <li><a href="contributing.html">Contributing</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -30,9 +29,12 @@
         <li><strong>Tor Integration:</strong> Every command execution is routed through the Tor network to preserve anonymity.</li>
         <li><strong>Command Toralization:</strong> Use the <code>toralize</code> keyword to convert standard commands into Tor-protected executions.</li>
         <li><strong>Geolocation Masking:</strong> Hide your real IP and location from external services and observers.</li>
-        <li><strong>Modular Architecture:</strong> Built with clean separation using core files like <code>toralize.c</code>, <code>toralize.h</code>, and <code>Makefile</code>.</li>
+        <li><strong>LD_PRELOAD Technique:</strong> Intercepts and redirects system calls via dynamic linking for seamless anonymization.</li>
+        <li><strong>Educational & Research Friendly:</strong> Perfect for learning about system-level networking and privacy tools.</li>
+        <li><strong>Modular Architecture:</strong> Built with a clean separation using files like <code>toralize.c</code>, <code>toralize.h</code>, and <code>Makefile</code>.</li>
         <li><strong>Open-Source Community:</strong> Contributions are welcome from anyone passionate about privacy and Linux tooling.</li>
       </ul>
+      
     </div>
   </main>
 
