--- a/torcommander-website/index.html
+++ b/torcommander-website/index.html
@@ -14,7 +14,6 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="features.html">Features</a></li>
-        <li><a href="installation.html">Installation</a></li>
         <li><a href="documentation.html">Documentation</a></li>
         <li><a href="contributing.html">Contributing</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -26,9 +25,11 @@
   <main>
     <div class="card">
       <h2>Welcome to TorCommander</h2>
-      <p><strong>TorCommander</strong> is a Linux-based tool that routes your commands through the Tor network to ensure full anonymity and geolocation masking. It's the privacy-conscious hacker's best friend — built open-source, inspired by <em>Dr. Jones Birch</em>, and ready for the community.</p>
+      <p><strong>TorCommander</strong> is a lightweight, open-source Linux tool that anonymizes terminal command executions by routing traffic through the Tor network. Designed with simplicity and privacy in mind, it helps users protect their identity and bypass restrictive firewalls.
 
-      <p>Use TorCommander to:</p>
+      Inspired by cybersecurity advocate <em>Dr. Jones Birch</em>, the project takes the concept further offering a practical, minimal, and easily extensible tool for secure, command-line-based internet access.</p>
+
+      <p><strong>Use TorCommander to :</strong></p>
       <ul>
         <li>Hide your IP while running shell commands</li>
         <li>Integrate with Tor for every interaction</li>
