--- a/torcommander-website/about.html
+++ b/torcommander-website/about.html
@@ -12,9 +12,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="features.html">Features</a></li>
-        <li><a href="installation.html">Installation</a></li>
         <li><a href="documentation.html">Documentation</a></li>
         <li><a href="contributing.html">Contributing</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -30,7 +29,7 @@
 
       <p>Our goal is to provide developers, researchers, and enthusiasts with a modular, extensible, and secure framework for executing system commands without revealing their digital footprint.</p>
 
-      <p>This is not just a tool — it's an invitation to experiment, improve, and make the open web safer and freer for everyone.</p>
+      <p>This is not just a tool it's an invitation to experiment, improve, and make the open web safer and freer for everyone.</p>
     </div>
   </main>
 
