--- a/torcommander-website/contact.html
+++ b/torcommander-website/contact.html
@@ -14,10 +14,9 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="features.html">Features</a></li>
-        <li><a href="installation.html">Installation</a></li>
         <li><a href="documentation.html">Documentation</a></li>
         <li><a href="contributing.html">Contributing</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="faq.html">FAQ</a></li>
       </ul>
     </nav>
