--- a/torcommander-website/faq.html
+++ b/torcommander-website/faq.html
@@ -11,14 +11,14 @@
     <h1>TorCommander</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="features.html">Features</a></li>
-        <li><a href="installation.html">Installation</a></li>
-        <li><a href="documentation.html">Documentation</a></li>
-        <li><a href="contributing.html">Contributing</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="faq.html" class="active">FAQ</a></li>
+        <li><a href='/'>Home</a></li>
+        <li><a href='/about'>About</a></li>
+        <li><a href='/features'>Features</a></li>
+        <li><a href='/installation'>Installation</a></li>
+        <li><a href='/documentation'>Documentation</a></li>
+        <li><a href='/contributing'>Contributing</a></li>
+        <li><a href='/contact'>Contact</a></li>
+        <li><a class='active' href='/faq'>FAQ</a></li>
       </ul>
     </nav>
   </header>
@@ -56,11 +56,16 @@
         <h3 class="faq-question">❓ Can I contribute?</h3>
         <p class="faq-answer">Absolutely! Head over to the <a href="contributing.html">Contributing</a> page to learn how to get started.</p>
       </div>
+
+      
+
+      </div>
+
     </div>
   </main>
 
   <footer>
-    &copy; 2025 TorCommander. Answers that keep you secure.
+    &copy; 2025 TorCommander. Securing your shell.
   </footer>
 
   <script src="js/script.js"></script>
